# samd21-playground-original

./: .gitignore  .travis.yml  .travis.yml.swp  README.md
.circleci/: config.yml
CCtest/: CCtest.atsln
CCtest/CCtest/: CCtest.componentinfo.xml  CCtest.cppproj
CCtest/CCtest/src/: interrupts.c  main.cc  setup.c  setup.h
CCtest/CCtest/src/bare-metal/: dynamic-memory.cc  dynamic-memory.h
CCtest/CCtest/src/conf/: conf_clocks.h
CCtest/CCtest/src/perhipial/: button.cc  button.h  led.cc  led.h
CCtest/CCtest/src/perhipial/button/: gpio-button-interface.h  sw0.cc  sw0.h
CCtest/CCtest/src/perhipial/led/: io1-led.cc  io1-led.h  led-blue.cc  led-blue.h  led-green.cc  led-green.h  led-red.cc  led-red.h  led0.cc  led0.h  pwm-led-interface.h
CCtest/CCtest/src/util/: clock.cc  clock.h  delay.cc  reset.cc  syscalls.c  wait.h
DELAY_EXAMPLE1/: DELAY_EXAMPLE1.atsln
DELAY_EXAMPLE1/DELAY_EXAMPLE1/: DELAY_EXAMPLE1.cproj
DELAY_EXAMPLE1/DELAY_EXAMPLE1/src/ASF/common2/services/delay/example/: delay_example.c
DELAY_EXAMPLE1/DELAY_EXAMPLE1/src/config/: conf_clocks.h
SD_MMC_EXAMPLE22/: SD_MMC_EXAMPLE22.atsln
SD_MMC_EXAMPLE22/SD_MMC_EXAMPLE22/: SD_MMC_EXAMPLE22.cproj
SD_MMC_EXAMPLE22/SD_MMC_EXAMPLE22/src/: example.c
SD_MMC_EXAMPLE22/SD_MMC_EXAMPLE22/src/ASF/sam0/utils/syscalls/gcc/: syscalls.c
blink/: .clang-tidy  Dockerfile  README.md  test.py
blink/src/: .CMakeLists.txt.swp  CMakeLists.txt
blink/src/app/: .CMakeLists.txt.swp  .main.cc.swp  CMakeLists.txt  main.cc
blink/src/cmsis/: CMakeLists.txt  core_cm0plus.h
blink/src/led/: led.cc  led.h
blink/src/perhipial/: CMakeLists.txt
blink/src/perhipial/led/: .led0.h.swp  gpio-led-interface.h  led0.cc  led0.h
blink/src/peripheral/: CMakeLists.txt
blink/src/peripheral/led/: gpio-led-interface.h  led0.cc  led0.h
blink/src/samd21/: CMakeLists.txt  interrupt-handlers.c  interrupt-handlers.h  samd21.h  samd21e15b.h  samd21e16a.h  samd21g16a.h  samd21g16b.h  samd21j15b.h  samd21j18a.h  segments.h  startup.c  system_samd21.c
blink/src/samd21/pio/: samd21j18a.h
blink/src/util/: CMakeLists.txt  clock.cc  clock.h  delay.cc  delay.h  dynamic-memory.cc  dynamic-memory.h  reset.cc  reset.h  syscalls.c  syscalls.h  unused.h  wait.h
cmake-playground/src/: CMakeLists.txt
cmake-playground/src/app/: CMakeLists.txt  main.cc
cmake-playground/src/lib/: CMakeLists.txt  add.cc  add.h
omzlo-cmake/: .CMakeLists.txt.swp  CMakeLists.txt  README  debug.sh  main.c  main.cc  openocd.cfg  system_samd21.c
omzlo-cmake/app/: main.cc
omzlo-cmake/cmsis/: CMakeLists.txt  core_cm0plus.h
omzlo-cmake/led/: CMakeLists.txt
omzlo-cmake/samd21/: samd21e15a.h  samd21e15bu.h  samd21e15l.h  samd21e16b.h  samd21e16bu.h  samd21e16l.h  samd21e18a.h  samd21g15l.h  samd21g16l.h  samd21g18a.h  startup_samd21.c
omzlo-cmake/util/: CMakeLists.txt  delay.cc
omzlo-tutorial/: .Makefile.swp  Makefile  main.c  main.d  omzlo-tutorial.elf  startup_samd21.d  system_samd21.d
ubuntu-asf/: .CMakeLists.txt.swp  .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  README  TODO  check-code-style  openocd.cfg  run-debugger
ubuntu-asf/cmake/: embedded-cmaker.cmake  toolchain-base-gcc.cmake  toolchain-gnu-arm.cmake
ubuntu-asf/src/: CMakeLists.txt  main.c
ubuntu-asf/src/ASF/sam0/utils/make/: Makefile.sam.in
ubuntu-asf/src/BL/boards/: board_4d52001a.h
ubuntu-asf/src/app/: CMakeLists.txt  main.c  main.cc
ubuntu-asf/src/asf/: asf.h
ubuntu-asf/src/asf/common/services/ioport/sam0/: ioport.h
ubuntu-asf/src/asf/sam0/drivers/nvm/: nvm.c
ubuntu-asf/src/asf/sam0/drivers/system/clock/clock_samd21_r21_da_ha1/: clock_feature.h
ubuntu-asf/src/asf/sam0/utils/cmsis/samd21/include/: samd21j18a.h
ubuntu-asf/src/asf/sam0/utils/cmsis/samd21/source/gcc/: startup_samd21.c
ubuntu-asf/src/asf/sam0/utils/linker_scripts/samd21/gcc/: samd21j18a_flash.ld
ubuntu-asf/src/asf/sam0/utils/syscalls/gcc/: syscalls.c
ubuntu-asf/src/cmake/: embedded-cmaker.cmake  toolchain-base-gcc.cmake
ubuntu-asf/src/config/: conf_board.h  conf_clocks.h  conf_extint.h  conf_sleepmgr.h
ubuntu-asf/src/peripheral/: CMakeLists.txt
ubuntu-asf/src/peripheral/button/: gpio-button.h  sw0.cc  sw0.h
ubuntu-asf/src/peripheral/led/: gpio-led-interface.h  gpio-led.h  io1led.cc  io1led.h  led0.cc  led0.h  pwm-led.h
ubuntu-blink/: openocd.cfg
ubuntu-blink/src/: .CMakeLists.txt.swp  CMakeLists.txt
ubuntu-blink/src/app/: CMakeLists.txt  main.cc  startup_samd21.c  system_samd21.c
ubuntu-blink/src/cmsis/: CMakeLists.txt  cmsis.c  cmsis_core.c  core_cm0plus.h
ubuntu-blink/src/cmsis.backup/: CMakeLists.txt
ubuntu-blink/src/perhipial/: .CMakeLists.txt.swp  CMakeLists.txt
ubuntu-blink/src/perhipial/led/: led0.cc  led0.h
ubuntu-blink/src/samd21/: .samd21j18a.h.swp  CMakeLists.txt  samd21e17a.h  samd21g15a.h  samd21g15b.h  samd21g17a.h  samd21g17au.h  samd21g18au.h  samd21j15a.h  samd21j16a.h  samd21j16b.h  samd21j17a.h  samd21j18a.c  samd21j18a.h
ubuntu-blink/src/samd21.backup/: CMakeLists.txt  samd21j18a.h
ubuntu-blink/src/samd21.backup/include/: samd21j18a.h
ubuntu-blink/src/samd21/include/: .samd21j18a.h.swp
ubuntu-blink/src/util/: .clock.cc.swp  CMakeLists.txt  clock.cc  delay.cc  reset.cc  reset.h  syscalls.c  syscalls.h  wait.h
